# nexus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  HARDENING.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/roadmaps/: nexus.md
ProjectDocs/: architectural-decisions.md  architectural-risks.md  auth-design.md  phase1-foundation.md  ws-protocol-v1.md
client/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  svelte.config.js
client/src/lib/api/: client.ts
client/src/lib/canvas/: rdp.ts
client/src/lib/collab/: base.ts  provider.ts  whiteboard-provider.ts
client/src/lib/components/: ChannelList.svelte  ChatInput.svelte  CollabInvite.svelte  DrawingTools.svelte  FriendSuggestions.svelte  MessageList.svelte  PostCard.svelte  PresenceIndicator.svelte  ServerSidebar.svelte  UserAvatar.svelte  WatchPlayer.svelte  WatchRoom.svelte  WatchViewers.svelte  (+3 more)
client/src/routes/: +layout.svelte  +page.svelte
db/: init.surql
docs/: architecture.md  setup.md
roadmaps/: nexus.md
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: config.rs  error.rs  main.rs  metrics.rs  validation.rs
server/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  refresh.rs  ws_ticket.rs
server/src/collab/: doc.rs  mod.rs  post_store.rs  resource.rs  tasks.rs  whiteboard_store.rs
server/src/graph/: discovery.rs  feed.rs  mod.rs  social.rs
server/src/handlers/: channels.rs  discovery.rs  health.rs  messages.rs  mod.rs  posts.rs  servers.rs  social.rs  users.rs  watch.rs  whiteboards.rs
server/src/middleware/: api_rate_limit.rs  csrf.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
server/src/models/: channel.rs  message.rs  mod.rs  server.rs  user.rs  watch.rs  whiteboard.rs
server/src/repositories/: channel.rs  message.rs  mod.rs  post.rs  recommendations.rs  server.rs  social.rs  user.rs  watch.rs  whiteboard.rs
server/src/ws/: connection.rs  connection_helpers.rs  mod.rs  presence.rs  protocol.rs  replay.rs  room.rs  room_manager.rs  sequence.rs  user_connections.rs  watch_room.rs  watch_room_helpers.rs  watch_types.rs
(+20 files in other folders)
