[package]
name = "nexus-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
surrealdb = { version = "2", features = ["protocol-ws"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp"] }
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
async-trait = "0.1"

# Env/config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
time = "0.3"

[dev-dependencies]
mockall = "0.13"
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt", "test-util"] }
